--- a/CVPage.html
+++ b/CVPage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" type="text/css" href="cv.css"/>
+        <link rel="stylesheet" type="text/css" href="CVPage.css"/>
     </head>
     <body>
         <div class="nav">
