--- a/XPPage.html
+++ b/XPPage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" type="text/css" href="xp.css"/>
+        <link rel="stylesheet" type="text/css" href="XPPage.css"/>
     </head>
     <body>
         <div class="nav">
