--- a/XPPage.html
+++ b/XPPage.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="nav">
-            <a href="HomePage.html">Accueil</a>
+            <a href="index.html">Accueil</a>
             <a href="CVPage.html">Profil</a>
             <a href="XPPage.html">Projets</a>
             <a href="ContactPage.html">Contact</a>
