Music plugin+ links
Music plugin added + links icons added

--- a/CVPage.html
+++ b/CVPage.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" type="text/css" href="CVPage.css"/>
+        <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.6.3/css/all.css' integrity='sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/' crossorigin='anonymous'>
     </head>
     <body>
         <div class="nav">
@@ -67,6 +68,13 @@
                         <li>Anglais</li><br>
                         <li>Japonais</li>
                     </ul>
+                </div>
+                <div class="card">
+                    <h2>Suivez-moi</h2>
+                    <div class="links">
+                        <a href="https://www.linkedin.com/in/geoffrey-nemouchy-lamry-077b2a170/"><i class='fab fa-linkedin-in' style='font-size:48px;color:red'></i></a>&nbsp
+                        <a href="https://www.instagram.com/nelamge/"><i class='fab fa-instagram' style='font-size:48px;color:red'></i></a>
+                    </div>
                 </div>
                 <div class="card">
                     <button class="button" style="vertical-align:middle"><span>Télécharger le CV</span></button>
